<resources>
    <string name="app_name">Giving Kitchen</string>
    <string name="maps_api_key">AIzaSyDBHV75J85m-Zzrd6QcnB-txEMvNR1p2OA</string>
    <string name="tab_about">About</string>
    <string name="tab_events">Events</string>
    <string name="tab_assistance">Ask for Help</string>
    <string name="tab_resources">Resources</string>
    <string name="tab_give">Give</string>
    <string name="onboarding_container_previous">Previous</string>
    <string name="onboarding_container_next">Next</string>
    <string name="onboarding_container_done">Done</string>
    <string name="onboarding_page_one_header">WELCOME!</string>
    <string name="onboarding_page_one_desciption">Thanks for supporting Giving Kitchen! You can request assistance for food service workers in crisis, see upcoming events that benefit GK, and join our forces - all through this app.</string>
    <string name="onboarding_page_two_header">ASSISTANCE</string>
    <string name="onboarding_page_two_desciption">Request assistance for yourself or a food service worker in crisis. Just fill out our ask for help form, and one of our team members will contact you.</string>
    <string name="onboarding_page_three_header">STABILITY NETWORK</string>
    <string name="onboarding_page_three_description">We also have a Stability Network program to connect food service workers to community resource providers throughout Georgia and the United States.</string>
    <string name="onboarding_page_four_header">EVENTS</string>
    <string name="onboarding_page_four_description">Get info about upcoming events, and sign up to get alerts about volunteer opportunities.</string>
    <string name="about_tab_header">HEROES WITH APRONS INSTEAD OF CAPES</string>
    <string name="about_tab_about_us_header">About Us</string>
    <string name="about_tab_about_us_description">Giving Kitchen provides emergency assistance to food service workers through financial support and a network of community resources.</string>
    <string name="about_tab_about_us_button">How It Works</string>
    <string name="about_tab_newsletter_signup">Sign up for our newsletter</string>
    <string name="about_tab_stories_header">Stories</string>
    <string name="about_tab_story_zero_link">Free Online Suicide Prevention Training (Read on)</string>
    <string name="about_tab_story_one_link">Olde Pink House Fire (Read on)</string>
    <string name="about_tab_story_two_link">Let\'s Talk About It (Read on)</string>
    <string name="about_tab_story_three_link">The Performer (Read on)</string>
    <string name="about_tab_feedback_header">Feedback</string>
    <string name="about_tab_feedback_description">How do you like using Giving Kitchen\'s app?</string>
    <string name="about_tab_feedback_positive">I\'m a fan!</string>
    <string name="about_tab_feedback_neutral">It could be better.</string>
    <string name="about_tab_feedback_negative">I\'d like to report a problem.</string>
    <string name="about_tab_gk_email_address">info@thegivingkitchen.org</string>
    <string name="about_tab_gk_email_subject">I\'d like to report a problem with the GK app</string>
    <string name="rate_app_dialog_header">Thank You!</string>
    <string name="rate_app_dialog_description">We\'re a fan of you too! If you wouldn\'t mind leaving a rating for us, it would help us reach more food service workers in need across Georgia.</string>
    <string name="rate_app_dialog_positive_button">Rate Giving Kitchen</string>
    <string name="rate_app_dialog_negative_button">Maybe later</string>
    <string name="about_tab_qpr_banner">Sign up for free suicide prevention training</string>
    <string name="feedback_screen_back">Done</string>
    <string name="feedback_screen_header">FEEDBACK</string>
    <string name="feedback_screen_description">We\'re constantly trying to do better. Please leave your comments and suggestions to help us serve our community.</string>
    <string name="feedback_screen_button">Submit</string>
    <string name="feedback_dialog_header">Success!</string>
    <string name="feedback_dialog_description">Thank you! Your feedback is greatly appreciated.</string>
    <string name="feedback_dialog_button">Awesome!</string>
    <string name="events_tab_header_description">Giving Kitchen\'s signature and community partner events are rooted in great food, drink, service - and care for those who serve us every day.</string>
    <string name="events_tab_read_more">Read more \u2192</string>
    <string name="events_tab_learn_more">Learn more</string>
    <string name="events_tab_volunteer_banner">Give back! Volunteer at an event!</string>
    <string name="give_tab_credit_header_description">Donate, Volunteer, or Partner:\nThree Ways to Get Involved &amp;\u0020 Make a Difference.</string>
    <string name="give_tab_learn_more">Learn more</string>
    <string name="give_tab_credit_card_button">Make a One-time Donation</string>
    <string name="give_tab_recurring_donation_button">Set Up On-going Donations</string>
    <string name="give_tab_volunteer_header">Volunteer</string>
    <string name="give_tab_volunteer_description">From educating the public about our program services to providing special event support, GK would not exist without the dedication of our volunteers! Join the team:</string>
    <string name="give_tab_volunteer_button">Volunteer!</string>
    <string name="give_tab_join_forces_button">Community Partner Form</string>
    <string name="give_tab_partner_header">Partner</string>
    <string name="give_tab_partner_description">Would you like to become part of Giving Kitchen\'s social service or community resource referral program? We\'d love to hear from you!</string>
    <string name="give_tab_join_forces_description">Want to host an event to benefit GK? Let us know!</string>
    <string name="give_tab_partner_button">Stability Network Partner</string>
    <string name="give_tab_examples_amount">$%1$d</string>
    <string name="give_tab_examples_five">Every bit helps!</string>
    <string name="give_tab_examples_late_fee">Covers a late fee</string>
    <string name="give_tab_examples_water_bill">Covers a water bill</string>
    <string name="give_tab_examples_power_bill">Covers a power bill</string>
    <string name="give_tab_examples_gas_bill">Covers a gas bill</string>
    <string name="give_tab_examples_housing">Covers housing</string>
    <string name="give_tab_examples_total_grant">A total grant!!</string>
    <string name="assistance_tab_crisis_grants_title">FINANCIAL ASSISTANCE</string>
    <string name="assistance_tab_crisis_grants_description">GK can fund the cost of living expenses for food service workers who miss work due to an </string>
    <string name="assistance_tab_crisis_grants_illness">\u0020illness</string>
    <string name="assistance_tab_crisis_grants_injury">injury</string>
    <string name="assistance_tab_crisis_grants_death">housing disaster</string>
    <string name="assistance_tab_crisis_grants_disaster">death of an immediate family member</string>
    <string name="assistance_tab_crisis_grants_comma">,\u0020</string>
    <string name="assistance_tab_crisis_grants_or">or\u0020</string>
    <string name="assistance_tab_crisis_grants_period">.</string>
    <string name="assistance_tab_cta_for_you">For You</string>
    <string name="assistance_tab_cta_for_someone_else">For Someone Else</string>
    <string name="assistance_tab_start_inquiry">Start here to ask for help</string>
    <string name="assistance_tab_start_inquiry_description">You can ask for help for yourself or someone else.</string>
    <string name="assistance_tab_learn_more">Learn more</string>
    <string name="safetynet_tab_header_description">Our Stability Network program connects food service workers to various types of resources. Whether you receive a GK grant or not, these local services are standing by to help you.</string>
    <string name="safetynet_tab_learn_more">Learn more</string>
    <string name="safetynet_tab_facebook_description">Join our Food Service Workers group on Facebook</string>
    <string name="safetynet_tab_groups_description">Our groups are places to share industry events, community resources (including job postings), and best practices.</string>
    <string name="safetynet_tab_join_us">Join us on Facebook</string>
    <string name="safetynet_tab_resources_filter_label">Resources</string>
    <string name="safetynet_tab_resources_filter_button">Filter</string>
    <string name="safetynet_tab_counties_filter_label">Show resources for</string>
    <string name="safetynet_tab_counties_filter_button">All Counties</string>
    <string name="safetynet_bottomsheet_website_button">Visit Website</string>
    <string name="safetynet_bottomsheet_directions_button">Get Directions</string>
    <string name="safetynet_bottomsheet_call_button">Call</string>
    <string name="safetynet_bottomsheet_serves_counties">Serves %1$s</string>
    <string name="resources_tab_intro_dialog_title">STABILITY NETWORK</string>
    <string name="resources_tab_intro_dialog_description">Our Stability Network program connects food service workers to various types of resources. Whether you receive financial assistance from GK or not, these local services are standing by to help you.</string>
    <string name="resources_tab_intro_dialog_button">Okay</string>
    <string name="resources_tab_searchview_hint">Search Stability Network</string>
    <string name="resources_tab_selected_filter_button">Filtering To: %1$s</string>
    <string name="resources_tab_filter_all">All</string>
    <string name="resources_tab_location_dialog_message">Allow Giving Kitchen to look up your location while you\'re using the app? This allows us to show resources close to you.</string>
    <string name="resources_tab_filter_title">Stability Network Categories</string>
    <string name="resources_tab_filter_toggle_button">Toggle All</string>
    <string name="resources_tab_filter_save_button">Save</string>
    <string name="resources_tab_filter_cancel_button">Cancel</string>
    <string name="facebook_groups_header">JOIN US ON FACEBOOK</string>
    <string name="facebook_groups_header_description">Join the GK Food Service Workers group on Facebook for support and potential employment opportunities near you: </string>
    <string name="facebook_groups_group_metro_atl">Metro ATL</string>
    <string name="facebook_groups_group_athens">Athens</string>
    <string name="facebook_groups_group_columbus">Columbus</string>
    <string name="facebook_groups_group_rome">Rome</string>
    <string name="facebook_groups_group_macon">Macon</string>
    <string name="facebook_groups_group_gainesville">Gainesville</string>
    <string name="facebook_groups_group_north_ga">North GA</string>
    <string name="facebook_groups_group_south_ga">South GA</string>
    <string name="facebook_groups_group_coastal_ga">Coastal GA</string>
    <string name="facebook_groups_group_north_carolina">North Carolina</string>
    <string name="about_tab_performer_story_image_description">Reggie the performer</string>
    <string name="about_tab_irma_story_image_description">A family affected by hurricane Irma</string>
    <string name="about_tab_athens_story_image_description">An event being held in Athens, Georgia</string>
    <string name="address_question_street_label">Street Address</string>
    <string name="address_question_street_hint">123 Main Street</string>
    <string name="address_question_linetwo_label">Address Line 2</string>
    <string name="address_question_linetwo_hint">Unit 100</string>
    <string name="address_question_city_label">City</string>
    <string name="address_question_city_hint">City</string>
    <string name="address_question_state_label">State / Province / Region</string>
    <string name="address_question_state_hint">State</string>
    <string name="address_question_zipcode_label">Postal / Zip Code</string>
    <string name="address_question_zipcode_hint">Zip</string>
</resources>