<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/header_aboutTab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_image_height"
            android:layout_marginTop="@dimen/header_image_top_margin"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_tab_about"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/header_description_aboutTab"
            style="@style/EgyptianText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/universal_horizontal_spacing"
            android:layout_marginEnd="@dimen/universal_horizontal_spacing"
            android:gravity="center_horizontal"
            android:text="@string/about_tab_header"
            android:textColor="@color/gk_orange"
            android:textSize="12pt" />

        <View
            style="@style/DividerViewLarge"
            android:layout_marginTop="20dp" />

        <TextView
            style="@style/GiveTabHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/universal_horizontal_spacing"
            android:text="@string/about_tab_about_us_header" />

        <TextView
            style="@style/GiveTabParagraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/universal_horizontal_spacing"
            android:text="@string/about_tab_about_us_description" />

        <Button
            android:id="@+id/aboutUsButton_aboutTab"
            style="@style/CTAButton"
            android:layout_marginStart="@dimen/universal_horizontal_spacing"
            android:layout_marginTop="@dimen/universal_horizontal_spacing"
            android:layout_marginEnd="@dimen/universal_horizontal_spacing"
            android:text="@string/about_tab_about_us_button" />

        <View
            style="@style/DividerViewLarge"
            android:layout_marginTop="20dp" />

        <TextView
            android:id="@+id/newsletterSignup_aboutTab"
            style="@style/GiveTabButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_tab_newsletter_signup" />

        <View style="@style/DividerViewLarge" />

        <TextView
            style="@style/GiveTabHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/universal_horizontal_spacing"
            android:text="@string/about_tab_stories_header" />

        <ImageView
            android:id="@+id/storyOneImage_aboutTab"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="@dimen/universal_horizontal_spacing"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/universal_horizontal_spacing"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/about_tab_performer_story_image_description"
            android:src="@drawable/pic_story_performer" />

        <TextView
            android:id="@+id/storyOneLink_aboutTab"
            style="@style/GiveTabButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_tab_story_one_link" />

        <View style="@style/DividerViewSmall" />

        <ImageView
            android:id="@+id/storyTwoImage_aboutTab"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="@dimen/universal_horizontal_spacing"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/universal_horizontal_spacing"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/about_tab_irma_story_image_description"
            android:src="@drawable/pic_story_irma" />

        <TextView
            android:id="@+id/storyTwoLink_aboutTab"
            style="@style/GiveTabButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_tab_story_two_link" />

        <View style="@style/DividerViewSmall" />

        <ImageView
            android:id="@+id/storyThreeImage_aboutTab"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="@dimen/universal_horizontal_spacing"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/universal_horizontal_spacing"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/about_tab_athens_story_image_description"
            android:src="@drawable/pic_story_athens" />

        <TextView
            android:id="@+id/storyThreeLink_aboutTab"
            style="@style/GiveTabButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_tab_story_three_link" />

        <View style="@style/DividerViewLarge" />

        <TextView
            style="@style/GiveTabHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/universal_horizontal_spacing"
            android:text="@string/about_tab_stories_header" />

        <TextView
            style="@style/GiveTabParagraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/universal_horizontal_spacing"
            android:text="@string/about_tab_feedback_description" />

        <TextView
            android:id="@+id/feedbackPositive_aboutTab"
            style="@style/GiveTabButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_tab_feedback_positive" />

        <View style="@style/DividerViewSmall" />

        <TextView
            android:id="@+id/feedbackNeutral_aboutTab"
            style="@style/GiveTabButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_tab_feedback_neutral" />

        <View style="@style/DividerViewSmall" />

        <TextView
            android:id="@+id/feedbackNegative_aboutTab"
            style="@style/GiveTabButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_tab_feedback_negative" />

        <View style="@style/DividerViewLarge" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>