<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/icon_resourcesIntroDialog"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_tab_assistance"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/title_resourcesIntroDialog"
        style="@style/BoldLargeHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/universal_horizontal_spacing"
        android:layout_marginEnd="@dimen/universal_horizontal_spacing"
        android:text="@string/resources_tab_intro_dialog_title"
        android:textColor="@color/gk_orange" />

    <TextView
        android:id="@+id/description_resourcesIntroDialog"
        style="@style/ParagraphText"
        android:textColor="@color/gk_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/universal_horizontal_spacing"
        android:layout_marginTop="@dimen/universal_vertical_spacing"
        android:layout_marginEnd="@dimen/universal_horizontal_spacing"
        android:text="@string/resources_tab_intro_dialog_description" />

    <Button
        android:id="@+id/button_resourcesIntroDialog"
        android:layout_marginStart="@dimen/universal_horizontal_spacing"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/universal_horizontal_spacing"
        android:text="@string/resources_tab_intro_dialog_button"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/universal_vertical_spacing"
        android:paddingBottom="@dimen/universal_vertical_spacing"
        android:gravity="center_horizontal"
        android:background="@color/gk_orange"
        android:textColor="@color/white"
        android:textSize="8pt"
        android:fontFamily="@font/kulturista_medium"
        android:elevation="10dp" />
</LinearLayout>